feat: Added CSS styles to improve design and presentation
Updated the styles.css file to include additional styles for the index.html page and the other html for recipes brown_sugar_smokies.html, ceviche.html and pesto_pizza.html.

Added CSS classes to HTML elements to improve design and presentation.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 *{
     background-color:#E5E1DA ;
+    font-family: "Roboto", sans-serif;
 }
 
-.title{
-    text-align: center;
+.title, .sub-title{
     color: #3D3B40;
 }
  
+.title{
+text-align: center;
+}
+
 .recipes{
  color: #776B5D;
 }
